# gnome-books

./: .gitmodules  COPYING  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  gb-resources.c  gb-webview.c  gb-webview.h  git.mk  gnome-books  gnome-books.js
data/: Makefile.am  org.gnome.Books.appdata.xml.in  org.gnome.Books.desktop.in  org.gnome.Books.search-provider.ini  org.gnome.books.gschema.xml
epub.js/examples/: pagination.html  single.html  single1.html
epub.js/reader/css/: main.css
epub.js/reader/the-lifestone/: content.opf  stylesheet.css  titlepage.xhtml  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_000.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_001.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_002.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_003.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_004.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_005.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_006.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_007.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_008.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_009.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_010.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_011.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_012.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_013.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_014.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_015.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_016.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_017.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_018.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_019.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_020.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_021.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_022.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_023.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_024.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_025.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_026.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_027.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_028.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_029.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_030.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_031.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_032.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_033.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_034.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_035.html  tmp_14ca9a44d9bc4a06338bce21316deb2d_4koWz7.ch.fixed.fc.tidied.stylehacked.xfixed_split_036.html  (+5 more)
epub.js/src/: book.js
lib/: Makefile-lib.am  Makefile.am  Makefile.in  gb-resources.xml  gb-webview.c  gb-webview.h
src/: Makefile-js.am  Makefile-lib.am  Makefile.am  application.js  config.js  contents.js  embed.js  epub-metadata.py  epub-thumbnailer.py  epub-unpack.sh  gnome-books.desktop.in  gnome-books.gresource.xml  gnome-books.in  gnome-books.js  library.js  main.js  mainToolbar.js  mainWindow.js  manager.js  org.gnome.Books.service  org.gnome.Books.service.in  path.js  path.js.in  utils.js  view.js  webView.js  windowMode.js
src/lib/: gb-book-links.c  gb-book-links.h  gb-book-state.c  gb-book-state.h  gb-nav-bar.c  gb-nav-bar.h  gb-webview.c  gb-webview.h
src/resources/: Adwaita.css  app-menu.ui  read-menu.ui
